Fix find of android sdk jar.
When setting compileSdkVersion to a target like Google Inc.:Google APIs:21 the
function to get the android sdk failed. Now we get the API level from the
targetSdkVersion and build the jar path with that information.

--- a/gradle/init.gradle
+++ b/gradle/init.gradle
@@ -7,7 +7,8 @@ allprojects {
     task -> doLast {
       println "vim-project " + project.name
       if(project.hasProperty('android')) {
-        println "vim-target " + project.android.compileSdkVersion
+        def level = project.android.defaultConfig.targetSdkVersion.getApiLevel()
+        println "vim-target android-" + level
       }
       project.configurations.each {
         conf -> conf.collect {
