Remove deprecated --no-color parameter.
The --no-color option is deprecated since gradle 2.3. This fix replaces the
option with the newer --console option when using gradle >= 2.3.

  Closes #58

--- a/gradle/init.gradle
+++ b/gradle/init.gradle
@@ -6,6 +6,8 @@ allprojects { project ->
 
   task vim {
     task -> doLast {
+      System.err.println ""
+      System.err.println "gradle-version " + gradleVersion
       System.err.println "vim-project " + project.name
       if(project.hasProperty('android') && project.android.defaultConfig.targetSdkVersion != null) {
         def level = project.android.defaultConfig.targetSdkVersion.getApiLevel()
