Finally support dependencies on variants.
Changes in gradle plugin caused the dependency listing code to fail as
they could not resolve() the configuration.

The new code iterates over the variants and extracts their compile
classpaths that is easier than the previous method.

We still keep the old method to support gradle (non-android) projects.

--- a/gradle/init.gradle
+++ b/gradle/init.gradle
@@ -9,30 +9,41 @@ allprojects { project ->
       System.err.println ""
       System.err.println "gradle-version " + gradleVersion
       System.err.println "vim-project " + project.name
-      if(project.hasProperty('android') && project.android.defaultConfig.targetSdkVersion != null) {
-        def level = project.android.defaultConfig.targetSdkVersion.getApiLevel()
-        System.err.println "vim-target android-" + level
-      }
 
+      if(project.hasProperty('android')) {
 
-      // Print the list of all dependencies jar files. This allows vim to parse
-      // the list and fill the CLASSPATH with the list of dependencies.
-      project.configurations.findAll {
-        it.metaClass.respondsTo(it, "isCanBeResolved") ? it.isCanBeResolved() : true
-      }.each {
-        it.resolve().each {
-          if(it.inspect().endsWith("jar")) {
-            System.err.println "vim-gradle " + it
-          } else if(it.inspect().endsWith("aar")) {
-            // If the dependency is an AAR file we try to determine the location
-            // of the classes.jar file in the exploded aar folder.
-            def splitted = it.inspect().split("/")
-            def namespace = splitted[-5]
-            def name = splitted[-4]
-            def version = splitted[-3]
-            def explodedPath = "$project.buildDir/intermediates/exploded-aar" +
-                               "/$namespace/$name/$version/jars/classes.jar"
-            System.err.println "vim-gradle " + explodedPath
+        if(project.android.defaultConfig.targetSdkVersion != null) {
+          def level = project.android.defaultConfig.targetSdkVersion.getApiLevel()
+          System.err.println "vim-target android-" + level
+        }
+
+        if(project.android.hasProperty('applicationVariants')) {
+          project.android.applicationVariants.all { variant ->
+            variant.getCompileClasspath().each {
+              System.err.println "vim-gradle " + it
+            }
+          }
+        }
+      } else {
+        // Print the list of all dependencies jar files. This allows vim to parse
+        // the list and fill the CLASSPATH with the list of dependencies.
+        project.configurations.findAll {
+          it.metaClass.respondsTo(it, "isCanBeResolved") ? it.isCanBeResolved() : false
+        }.each {
+          it.resolve().each {
+            if(it.inspect().endsWith("jar")) {
+              System.err.println "vim-gradle " + it
+            } else if(it.inspect().endsWith("aar")) {
+              // If the dependency is an AAR file we try to determine the location
+              // of the classes.jar file in the exploded aar folder.
+              def splitted = it.inspect().split("/")
+              def namespace = splitted[-5]
+              def name = splitted[-4]
+              def version = splitted[-3]
+              def explodedPath = "$project.buildDir/intermediates/exploded-aar" +
+                                 "/$namespace/$name/$version/jars/classes.jar"
+              System.err.println "vim-gradle " + explodedPath
+            }
           }
         }
       }
