Add new android linter for ALE.
This commit adds a new android ALE linter if the ALE plugin is installed
that runs gradle `lint` task available to Android projects. This enables
ALE to report Android lint errors.

--- a/gradle/init.gradle
+++ b/gradle/init.gradle
@@ -95,6 +95,9 @@ allprojects { project ->
       if( filePath == null ) {
         filePath = file([project.projectDir, "build", "outputs", "lint-results.xml"].join(File.separator))
       }
+      if( !filePath.exists() ) {
+        filePath = file([project.projectDir, "build", "reports", "lint-results.xml"].join(File.separator))
+      }
       if( filePath.exists() ) {
         def xml = (new XmlParser()).parse(filePath)
         xml.issue.each { issue ->
