--- a/gradle/init.gradle
+++ b/gradle/init.gradle
@@ -76,22 +76,28 @@ allprojects { project ->
 
     // Force findbugs, checkstyle and pmd reports to output xml and include
     // readable messages.
-    tasks.withType(FindBugs) {
-      configure(reports.xml) {
-        enabled true
-        withMessages true
+    if(hasFindbugs) {
+      tasks.withType(FindBugs) {
+        configure(reports.xml) {
+          enabled true
+          withMessages true
+        }
       }
     }
 
-    tasks.withType(Pmd) {
-      configure(reports.xml) {
-        enabled true
+    if(hasPmd) {
+      tasks.withType(Pmd) {
+        configure(reports.xml) {
+          enabled true
+        }
       }
     }
 
-    tasks.withType(Checkstyle) {
-      configure(reports.xml) {
-        enabled true
+    if(hasCheckstyle) {
+      tasks.withType(Checkstyle) {
+        configure(reports.xml) {
+          enabled true
+        }
       }
     }
   }
@@ -122,56 +128,62 @@ allprojects { project ->
 
     if( result.getFailure() != null ) {
 
-      project.tasks.withType(Pmd) { task ->
-        def report = task.reports.getXml().getDestination()
-        if(report != null && report.exists()) {
-          def xml = (new XmlParser()).parse(report)
-          xml.file.each { file ->
-            file.violation.each { violation ->
-              System.err.println "pmd: warning ${file.@name}:${violation.@beginline}:${violation.@begincolumn} ${violation.text().trim()}"
+      if(hasPmd) {
+        project.tasks.withType(Pmd) { task ->
+          def report = task.reports.getXml().getDestination()
+          if(report != null && report.exists()) {
+            def xml = (new XmlParser()).parse(report)
+            xml.file.each { file ->
+              file.violation.each { violation ->
+                System.err.println "pmd: warning ${file.@name}:${violation.@beginline}:${violation.@begincolumn} ${violation.text().trim()}"
+              }
             }
+            delete report
           }
-          delete report
         }
       }
 
-      project.tasks.withType(Checkstyle) { task ->
-        def report = task.reports.getXml().getDestination()
-        if(report.exists()) {
-          def xml = (new XmlParser()).parse(report)
-          xml.file.each { file ->
-            file.error.each { error ->
-              System.err.println "checkstyle: warning ${file.@name}:${error.@line}:${error.@column} ${error.@message}"
+      if(hasCheckstyle) {
+        project.tasks.withType(Checkstyle) { task ->
+          def report = task.reports.getXml().getDestination()
+          if(report.exists()) {
+            def xml = (new XmlParser()).parse(report)
+            xml.file.each { file ->
+              file.error.each { error ->
+                System.err.println "checkstyle: warning ${file.@name}:${error.@line}:${error.@column} ${error.@message}"
+              }
             }
+            delete report
           }
-          delete report
         }
       }
 
-      project.tasks.withType(FindBugs) { task ->
-        def report = task.reports.getXml().getDestination()
-        if(report.exists() && report.length() > 0) {
-          def xml = (new XmlParser()).parse(report)
-          xml.BugInstance.each { bug ->
-            def code = bug.@type
-            def message = ""
-            bug.ShortMessage.each { msg ->
-              message += " " + msg.text()
+      if(hasFindbugs) {
+        project.tasks.withType(FindBugs) { task ->
+          def report = task.reports.getXml().getDestination()
+          if(report.exists() && report.length() > 0) {
+            def xml = (new XmlParser()).parse(report)
+            xml.BugInstance.each { bug ->
+              def code = bug.@type
+              def message = ""
+              bug.ShortMessage.each { msg ->
+                message += " " + msg.text()
+              }
+              bug.SourceLine.each { line ->
+                def lineNr = line.@start == null ? 0 : line.@start
+                def columnNr = line.@startBytecode == null ? 0 : line.@startBytecode
+                // For some reason findbugs reports include only relative paths.
+                // Even worst it does not include the whole relative path!!. For
+                // this reason we try to find the absolute path here based on the
+                // source file collection. This may be slow if there are too many
+                // findbugs errors.
+                def absolutePath = task.source.filter { it.getAbsolutePath().endsWith("${line.@sourcepath}") }.getAsPath()
+                System.err.println "findbugs: warning ${absolutePath}:${lineNr}:${columnNr} ${message}"
+                System.err.println("    Details: http://findbugs.sourceforge.net/bugDescriptions.html#${code}")
+              }
             }
-            bug.SourceLine.each { line ->
-              def lineNr = line.@start == null ? 0 : line.@start
-              def columnNr = line.@startBytecode == null ? 0 : line.@startBytecode
-              // For some reason findbugs reports include only relative paths.
-              // Even worst it does not include the whole relative path!!. For
-              // this reason we try to find the absolute path here based on the
-              // source file collection. This may be slow if there are too many
-              // findbugs errors.
-              def absolutePath = task.source.filter { it.getAbsolutePath().endsWith("${line.@sourcepath}") }.getAsPath()
-              System.err.println "findbugs: warning ${absolutePath}:${lineNr}:${columnNr} ${message}"
-              System.err.println("    Details: http://findbugs.sourceforge.net/bugDescriptions.html#${code}")
-            }
+            delete report
           }
-          delete report
         }
       }
     }
